--- a/mytube.html
+++ b/mytube.html
@@ -18,22 +18,26 @@
         </div>
         <div class="middle-section"><input class="search-bar" id="search" type="text" placeholder="Search">
             <button class="search-button" >
-                <img  class="search-icon" src="Icons/searchglass.svg" >
+            <a href="https://google.com">
+                <img  class="search-icon" src="Icons/searchglass.svg" ></a>
             </button>
             <button class="voice-search-button">
-                <img class="voice-search-icon" src="Icons/voice-search-icon.svg" >
+                <a href="https://youtube.com">
+                <img class="voice-search-icon" src="Icons/voice-search-icon.svg" ></a>
             </button>
         </div>
-        <div class="right-section">
+        <div class="right-section">S
+            <a href="https://youtube.com">
             <img class="upload-icon" src="Icons/upload.svg">
-            <img class="youtube-apps-icon" src="Icons/youtube-apps.svg">
+            <a href="https://youtube.com">
+            <img class="youtube-apps-icon" src="Icons/youtube-apps.svg"></a>
             <div class="notifications-icon-container">
             <img class="notifications-icon" src="Icons/notifications.svg" >
             <div class="notification-count">3</div>
         </div>
+        <a href="https://youtube.com">
             <img class="current-user-picture" src="Thumbnails/channel picture andre.jpg">
-            
-
+        </a>
         </div>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,27 +45,33 @@
     </div>
 <div class="sidebar"> 
     <div class="sidebar-link">
-        <img src="Icons/home.svg" alt="home">
+       <a href="https://youtube.com">
+         <img src="Icons/home.svg" alt="home"></a>
         <div>Home</div>
     </div>
     <div class="sidebar-link">
-        <img src="Icons/explore.svg" alt="explore">
+        <a href="https://youtube.com">
+        <img src="Icons/explore.svg" alt="explore"></a>
         <div>Explore</div>
     </div>
     <div class="sidebar-link">
-        <img src="Icons/subscriptions.svg" alt="subscriptions">
+        <a href="https://youtube.com">
+        <img src="Icons/subscriptions.svg" alt="subscriptions"></a>
         <div>Subscriptions</div>
     </div>
     <div class="sidebar-link">
-        <img src="Icons/originals.svg" alt="originals">
+        <a href="https://youtube.com">
+        <img src="Icons/originals.svg" alt="originals"></a>
         <div>Originals</div>
     </div>
     <div class="sidebar-link">
-        <img src="Icons/youtube-music.svg" alt="youtube-music">
+        <a href="https://youtube.com">
+        <img src="Icons/youtube-music.svg" alt="youtube-music"></a>
         <div>Youtube Music</div>
     </div>
     <div class="sidebar-link">
-        <img src="Icons/library.svg" alt="library">
+        <a href="https://youtube.com">
+        <img src="Icons/library.svg" alt="library"></a>
         <div>Library</div>
     </div>
 </div>
@@ -202,20 +212,20 @@
         <!-- 7 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail-7" src="Thumbnails/channel picture andre.jpg" alt="maskpic">
             <div class="video-time">10:11</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/catpic.jpg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        Curing illness through smile therapy!
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                        Jimmyz.A.Cutter
                     </p>
                     <p class="video-stats">
-                        3.4M Views &#183; 6 months ago
+                        3000 Views &#183; 17 years ago
                     </p>
                 </div>
             </div>
@@ -224,20 +234,20 @@
         <!-- 8 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail" src="Thumbnails/Mens Slave quarters Mt vernon.jpg">
             <div class="video-time">12:33</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/girlpic1.jpeg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        George, you treat your slaves so well!
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                        Martha Washington Jr
                     </p>
                     <p class="video-stats">
-                        3.4M Views &#183; 6 months ago
+                        256.4M Views &#183; 12 months ago
                     </p>
                 </div>
             </div>
@@ -246,20 +256,20 @@
         <!-- 9 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail" src="Thumbnails/sleep in the yard 2023.jpg" alt="maskpic">
             <div class="video-time">5:44</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/catsleep.jpeg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        Cats poison the neighborhood dogs!
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                       Kitty Glitter
                     </p>
                     <p class="video-stats">
-                        3.4M Views &#183; 6 months ago
+                        2.2M Views &#183; 2 months ago
                     </p>
                 </div>
             </div>
@@ -268,20 +278,20 @@
         <!-- 10 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail" src="Thumbnails/Martin.jpeg" alt="maskpic">
             <div class="video-time">6:28</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/walnutauthor.jpeg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        They bringing back Martin for people with Martin Amnesia!
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                        Outside-IN
                     </p>
                     <p class="video-stats">
-                        3.4M Views &#183; 6 months ago
+                        3.2M Views &#183; 4 months ago
                     </p>
                 </div>
             </div>
@@ -290,17 +300,18 @@
         <!-- 11 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail" src="Thumbnails/Walnut.jpeg" alt="maskpic">
             <div class="video-time">4:20</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/7hillssign.jpeg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        Walnut, Schmalnut. Kids take down Cincinnati's Elite-'est' Public School!
+                    
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                        Not7Hills
                     </p>
                     <p class="video-stats">
                         3.4M Views &#183; 6 months ago
@@ -312,20 +323,20 @@
         <!-- 12 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail" src="Thumbnails/masks.jpg" alt="maskpic">
+            <img class="thumbnail" src="Thumbnails/trumpAintScared.jpeg" alt="maskpic">
             <div class="video-time">4:26</div>
         </div>
             <div class="channel-picture">
-                <img class="profile-picture" src="Thumbnails/background.jpeg" alt="bkgrnd">
+                <img class="profile-picture" src="Thumbnails/TrumpDancing.jpeg" alt="bkgrnd">
                 <div class="video-info">
                     <p class="video-title">
-                        Bonding over Self Care - Mommy and Me Facemasks!
+                        I'm not scared of some dumb lawsuit: Trump fires back
                     </p>
                     <p class="video-author">
-                        Megs-N-Bacon
+                        Republican Hoes for Trump
                     </p>
                     <p class="video-stats">
-                        3.4M Views &#183; 6 months ago
+                        43.4M Views &#183; 2 months ago
                     </p>
                 </div>
             </div>
