--- a/mytube.html
+++ b/mytube.html
@@ -26,7 +26,7 @@
                 <img class="voice-search-icon" src="Icons/voice-search-icon.svg" ></a>
             </button>
         </div>
-        <div class="right-section">S
+        <div class="right-section">
             <a href="https://youtube.com">
             <img class="upload-icon" src="Icons/upload.svg">
             <a href="https://youtube.com">
