--- a/mytube.html
+++ b/mytube.html
@@ -26,7 +26,7 @@
                 <img class="voice-search-icon" src="Icons/voice-search-icon.svg" ></a>
             </button>
         </div>
-        <div class="right-section">
+        <div class="right-section">S
             <a href="https://youtube.com">
             <img class="upload-icon" src="Icons/upload.svg">
             <a href="https://youtube.com">
@@ -212,7 +212,7 @@
         <!-- 7 Repeat this block for additional video previews -->
         <div class="video-preview">
             <div class="thumbnail-pic">
-            <img class="thumbnail-7" src="Thumbnails/channel picture andre.jpg" alt="maskpic">
+            <img class="thumbnail-7" src="Thumbnails/trumpmad.jpeg" alt="maskpic">
             <div class="video-time">10:11</div>
         </div>
             <div class="channel-picture">
