--- a/Dukespage.html
+++ b/Dukespage.html
@@ -5,7 +5,7 @@
     <title>When Your 12-Year-Old Feels Left Out: A Lesson in Friendship and Self-Worth</title>
 </head>
 <body>
-   <img src="Thumbnails/wallace.png" alt="Blog Post Image" style="width:100%; height:auto;">
+   <img src="Thumbnails/dukedark.png" alt="Blog Post Image" style="width:100%; height:auto;">
     <h1>When Your 12-Year-Old Feels Left Out: A Lesson in Friendship and Self-Worth</h1>
 
     <h2>Introduction</h2>
