--- a/Skye.html
+++ b/Skye.html
@@ -69,6 +69,9 @@
 
        
     </div>
-
+   <video controls autoplay loop style="width:50%;">
+        <source src="Thumbnails/bluesmoke.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
