--- a/Dukespage.html
+++ b/Dukespage.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>When Your 12-Year-Old Feels Left Out: A Lesson in Friendship and Self-Worth</title>
+     <style>
+        /* ... (other styles) ... */
+
+        .sister-button {
+            background-color: blue;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
    <img style="opacity: 0.5 ;" src="Thumbnails/dukedark.png" alt="Blog Post Image" style="width:100%; height:auto;">
@@ -39,6 +52,7 @@
         Your browser does not support the video tag.
     </video>
 
+    <a href="https://writeitincursive.github.io/Andre-website/skye.html" class="sister-button">My Sister's Page</a>
 
 </body>
 </html>
