--- a/Skye.html
+++ b/Skye.html
@@ -36,6 +36,14 @@
             max-width: 100%;
             height: auto;
         }
+        .brother-button {
+            background-color: darkblue;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-size: 18px;
     </style>
 </head>
 <body>
@@ -73,5 +81,7 @@
         <source src="Thumbnails/bluesmoke.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+      <a href="https://writeitincursive.github.io/Andre-website/Dukespage.html" class="brother-button">My Brother's Page</a>
+
 </body>
 </html>
