--- a/Dukespage.html
+++ b/Dukespage.html
@@ -54,7 +54,7 @@
     <br>
     <br>
     <br>
-    <a href="https://writeitincursive.github.io/Andre-website/skye.html" class="sister-button">My Sister's Page</a>
+    <a href="https://writeitincursive.github.io/Andre-website/Skye.html" class="sister-button">My Sister's Page</a>
 
 </body>
 </html>
