--- a/Skye.html
+++ b/Skye.html
@@ -70,14 +70,14 @@
 
         <!-- Artwork 3 -->
         <div class="artwork">
-            <img src="thumbnails/skye.art.3.png" alt="Artwork 3">
+            <img src="thumbnails/sky.art.3.png" alt="Artwork 3">
             <h2>Title of Artwork 3</h2>
             <p>Description for Artwork 3</p>
         </div>
 
        
     </div>
-   <video controls autoplay loop style="width:50%;">
+   <video controls autoplay loop style="width:100%;">
         <source src="Thumbnails/bluesmoke.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
