--- a/Skye.html
+++ b/Skye.html
@@ -52,7 +52,7 @@
         <h1>Skye's AI Artwork</h1>
         <p>Discover the beauty of art, powered by artificial intelligence.</p>
     </header>
-
+<img style="opacity: 0.5 ;" src="Thumbnails/skye.png" alt="Blog Post Image" style="width:100%; height:auto;">
     <div class="container">
         <!-- Artwork 1 -->
         <div class="artwork">
