--- a/Skye.html
+++ b/Skye.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <audio controls autoplay>
+  <source src="your-song.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
     <meta charset="UTF-8">
     <title>AI Artwork by Skye</title>
     <style>
@@ -81,9 +85,14 @@
         <source src="Thumbnails/bluesmoke.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+    <br>
+    <br>
+    <br>
       <a href="https://writeitincursive.github.io/Andre-website/Dukespage.html" class="brother-button">My Brother's Page</a>
 <br>
     <br>
     <br>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
