--- a/Skye.html
+++ b/Skye.html
@@ -60,21 +60,21 @@
     <div class="container">
         <!-- Artwork 1 -->
         <div class="artwork">
-            <img src="thumbnails/Skye.art.1.png" alt="Artwork 1">
+            <img src="Thumbnails/Skye.art.1.png" alt="Artwork 1">
             <h2>Title of Artwork 1</h2>
             <p>Description for Artwork 1</p>
         </div>
 
         <!-- Artwork 2 -->
         <div class="artwork">
-            <img src="thumbnails.skye.art.2.png" alt="Artwork 2">
+            <img src="Thumbnails/skye.art.2.png" alt="Artwork 2">
             <h2>Title of Artwork 2</h2>
             <p>Description for Artwork 2</p>
         </div>
 
         <!-- Artwork 3 -->
         <div class="artwork">
-            <img src="thumbnails/sky.art.3.png" alt="Artwork 3">
+            <img src="Thumbnails/sky.art.3.png" alt="Artwork 3">
             <h2>Title of Artwork 3</h2>
             <p>Description for Artwork 3</p>
         </div>
