--- a/Skye.html
+++ b/Skye.html
@@ -60,7 +60,7 @@
     <div class="container">
         <!-- Artwork 1 -->
         <div class="artwork">
-            <img src="Thumbnails/Skye.art.1.png" alt="Artwork 1">
+            <img src="Thumbnails/skye.art.1.png" alt="Artwork 1">
             <h2>Title of Artwork 1</h2>
             <p>Description for Artwork 1</p>
         </div>
@@ -68,15 +68,15 @@
         <!-- Artwork 2 -->
         <div class="artwork">
             <img src="Thumbnails/skye.art.2.png" alt="Artwork 2">
-            <h2>Title of Artwork 2</h2>
-            <p>Description for Artwork 2</p>
+            <h2>Dance Time</h2>
+            <p>Young Lady prepares for a dance recital</p>
         </div>
 
         <!-- Artwork 3 -->
         <div class="artwork">
             <img src="Thumbnails/sky.art.3.png" alt="Artwork 3">
-            <h2>Title of Artwork 3</h2>
-            <p>Description for Artwork 3</p>
+            <h2>Detective Dog</h2>
+            <p>Hot Dog Detective fights crime and killer ketchup packets!</p>
         </div>
 
        
@@ -93,6 +93,7 @@
     <br>
     <br>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
 </body>
 </html>
