--- a/Skye.html
+++ b/Skye.html
@@ -48,6 +48,12 @@
             text-decoration: none;
             font-family: 'Comic Sans MS', cursive, sans-serif;
             font-size: 18px;
+               .cool-title {
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            text-align: center;
+            color: darkblue;
+            text-shadow: 2px 2px 4px #000000;
+            margin-bottom: 20px;
     </style>
 </head>
 <body>
@@ -61,15 +67,16 @@
         <!-- Artwork 1 -->
         <div class="artwork">
             <img src="Thumbnails/skye.art.1.png" alt="Artwork 1">
-            <h2>Title of Artwork 1</h2>
-            <p>Description for Artwork 1</p>
+            <h2>If I was a cartoon</h2>
+            <p>I described me to AI</p>
         </div>
 
         <!-- Artwork 2 -->
         <div class="artwork">
             <img src="Thumbnails/skye.art.2.png" alt="Artwork 2">
             <h2>Dance Time</h2>
-            <p>Young Lady prepares for a dance recital</p>
+            <p>Winner of the dance recital....</p>
+            <p>'You should see me in a crown'</p>
         </div>
 
         <!-- Artwork 3 -->
@@ -92,7 +99,7 @@
 <br>
     <br>
     <br>
-
+    <h1 class="cool-title">Jam to This Awesome Tune!</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
 </body>
