--- a/Dukespage.html
+++ b/Dukespage.html
@@ -47,7 +47,7 @@
     <h2>Conclusion</h2>
     <p>Being left out is painful, but it's also an opportunity for growth and self-discovery. Duke has the chance to evaluate his friendships, learn about his self-worth, and develop coping strategies that will serve him well in the future. And you, as a parent, have the opportunity to guide him through one of life's challenging lessons.</p>
 
-    <video controls autoplay loop style="width:50%;">
+    <video controls  style="width:50%;">
         <source src="Thumbnails/halloweenparty.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
