--- a/Skye.html
+++ b/Skye.html
@@ -51,6 +51,7 @@
             color: darkblue;
             text-shadow: 2px 2px 4px #000000;
             margin-bottom: 20px;
+                  
     </style>
 </head>
 <body>
@@ -86,7 +87,7 @@
 
        
     </div>
-   <video controls autoplay loop style="width:100%;">
+   <video style="width:50%;" controls autoplay loop style="width:100%;">
         <source src="Thumbnails/bluesmoke.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
