--- a/Skye.html
+++ b/Skye.html
@@ -99,7 +99,7 @@
     <br>
     <br>
     <h1 class="cool-title">Jam to This Awesome Tune!</h1>
-    <iframe width="650" height="auto" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="650" height="550" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
 </body>
 </html>
