--- a/Skye.html
+++ b/Skye.html
@@ -97,6 +97,10 @@
       <a href="https://writeitincursive.github.io/Andre-website/Dukespage.html" class="brother-button">My Brother's Page</a>
 <br>
     <br>
+    <video controls  style="width:50%;">
+        <source src="Thumbnails/waffles.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <br>
     <h1 class="cool-title">Jam to This Awesome Tune!</h1>
     <iframe width="650" height="550" src="https://www.youtube.com/embed/RlPNh_PBZb4?si=wSeKJlsVjFD_OUJK?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
