--- a/dre.html
+++ b/dre.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Link to your CSS files -->
-    <link rel="stylesheet" href="CSS Files/css_header.css">
-    <link rel="stylesheet" href="CSS Files/css_main_content.css">
+    <link rel="stylesheet" href="Styles/css_header.css">
+    <link rel="stylesheet" href="Styles/css_main_content.css">
     <!-- Commented out side-menu CSS since we are removing it -->
     <!-- <link rel="stylesheet" href="CSS Files/css_side_menu.css"> -->
-    <link rel="stylesheet" href="CSS Files/css_buttons_cta.css">
-    <link rel="stylesheet" href="CSS Files/css_footer.css">
+    <link rel="stylesheet" href="Styles/css_buttons_cta.css">
+    <link rel="stylesheet" href="Styles/css_footer.css">
 
     <title>Andre's website for creation and growth</title>
 </head>
