--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- Header Section -->
     <header>
         <!-- Logo Placement -->
+        <div id="logo">
+    <img src="Thumbnails/wallaceBrown.png" alt="Your Logo">
+</div>
          <!-- Removed one of the duplicate nav sections and consolidated it -->
         <nav>
             <ul>
