--- a/dre.html
+++ b/dre.html
@@ -42,7 +42,19 @@
                 <li><a href="#gallery">Gallery</a></li>
             </ul>
         </nav>
-    
+    <!-- Sidebar Section -->
+    <div class="sidebar">
+        <a href="#link1">Link 1</a>
+        <a href="#link2">Link 2</a>
+        <a href="#link3">Link 3</a>
+        <a href="#link4">Link 4</a>
+        <a href="#link5">Link 5</a>
+        <a href="#link6">Link 6</a>
+        <a href="#link7">Link 7</a>
+        <a href="#link8">Link 8</a>
+        <a href="#link9">Link 9</a>
+        <a href="#link10">Link 10</a>
+    </div>
     <!-- Main Content Section -->
     <main>
         <!-- Logo Placement -->
