--- a/dre.html
+++ b/dre.html
@@ -8,6 +8,7 @@
     <!-- Link to your CSS files -->
     <link rel="stylesheet" href="Styles/css_header.css">
     <link rel="stylesheet" href="Styles/css_main_content.css">
+      <link rel="stylesheet" href="Styles/css_sidebar.css">
     <!-- Commented out side-menu CSS since we are removing it -->
     <!-- <link rel="stylesheet" href="CSS Files/css_side_menu.css"> -->
     <link rel="stylesheet" href="Styles/css_buttons_cta.css">
