--- a/dre.html
+++ b/dre.html
@@ -45,13 +45,14 @@
         </nav>
     <!-- Sidebar Section -->
     <div class="sidebar">
-        <a href="#link1">Link 1</a>
-        <a href="#link2">Link 2</a>
-        <a href="#link3">Link 3</a>
-        <a href="#link4">Link 4</a>
-        <a href="#link5">Link 5</a>
-        <a href="#link6">Link 6</a>
-        <a href="#link7">Link 7</a>
+       
+        <a href="https://writeitincursive.github.io/Andre-website/dre.html">Home</a> 
+        <a href="https://chat.openai.com/">ChatGPT</a>
+          <a href="https://www.youtube.com/">YouTube</a>
+        <a href="https://www.w3schools.com/">W3Schools</a>
+        <a href="https://www.jeffsu.org/">Jeff Su</a>
+        <a href="https://libbyapp.com/shelf">Libby</a>           
+        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html">github</a>
         <a href="#link8">Link 8</a>
         <a href="#link9">Link 9</a>
         <a href="#link10">Link 10</a>
