--- a/dre.html
+++ b/dre.html
@@ -74,7 +74,7 @@
 
             <!-- Embedded Iframe for GPT Development Videos -->
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ZAD7k2kSRjU&pp=ygUIbmV3IGdwdHM%3D" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=5--JexprHuk" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <p> Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
