--- a/dre.html
+++ b/dre.html
@@ -46,13 +46,13 @@
     <!-- Sidebar Section -->
     <div class="sidebar">
        
-        <a href="https://writeitincursive.github.io/Andre-website/dre.html">Home</a> 
-        <a href="https://chat.openai.com/">ChatGPT</a>
-          <a href="https://www.youtube.com/">YouTube</a>
-        <a href="https://www.w3schools.com/">W3Schools</a>
-        <a href="https://www.jeffsu.org/">Jeff Su</a>
-        <a href="https://libbyapp.com/shelf">Libby</a>           
-        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html">github</a>
+        <a href="https://writeitincursive.github.io/Andre-website/dre.html" target="_blank">Home</a> 
+        <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
+          <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
+        <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
+        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html target="_blank"">github</a>
         <a href="#link8">Link 8</a>
         <a href="#link9">Link 9</a>
         <a href="#link10">Link 10</a>
