--- a/dre.html
+++ b/dre.html
@@ -46,7 +46,7 @@
     <!-- Sidebar Section -->
     <div class="sidebar">
        
-        <a href="https://writeitincursive.github.io/Andre-website/dre.html" target="_blank">Home</a> 
+        <a href="https://writeitincursive.github.io/Andre-website/dre.html" >Home</a> 
         <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
           <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
