--- a/dre.html
+++ b/dre.html
@@ -52,7 +52,7 @@
         <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
         <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
         <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
-        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html target="_blank"">github</a>
+        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">github</a>
         <a href="#link8">Link 8</a>
         <a href="#link9">Link 9</a>
         <a href="#link10">Link 10</a>
