--- a/dre.html
+++ b/dre.html
@@ -74,7 +74,7 @@
 
             <!-- Embedded Iframe for GPT Development Videos -->
             <div>
-                <iframe width="560" height="315" src="https://youtu.be/5--JexprHuk" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="<iframe width="853" height="480" src="https://www.youtube.com/embed/SAQOkx12bUw" title="New FREE AI Video Generator Tool | Canva Text to Video (Without Watermark!)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
                 
             </div>
 
