--- a/dre.html
+++ b/dre.html
@@ -73,11 +73,9 @@
             <p> The GPT series continues to break new ground. Discover the latest models that not only excel in language processing but also in creative and analytical tasks, paving the way for innovative applications in various industries. </p>
 
             <!-- Embedded Iframe for GPT Development Videos -->
-            <div>
-                <iframe width="560" height="315" src="<iframe width="853" height="480" src="https://youtu.be/dUjWMdR_Kw8" title="New FREE AI Video Generator Tool | Canva Text to Video (Without Watermark!)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
-                
-            </div>
-
+           <div>
+            <iframe width="560" height="315" src="https://youtu.be/NLypiQlLgyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
             <p> Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
         </section>
         <section id="ai-prompts">
