--- a/dre.html
+++ b/dre.html
@@ -74,7 +74,8 @@
 
             <!-- Embedded Iframe for GPT Development Videos -->
            <div>
-            <iframe width="560" height="315" src="https://youtu.be/NLypiQlLgyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/NLypiQlLgyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
            </div>
             <p> Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
         </section>
