--- a/dre.html
+++ b/dre.html
@@ -74,8 +74,8 @@
 
             <!-- Embedded Iframe for GPT Development Videos -->
            <div>
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/NLypiQlLgyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+           
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/3FInhQLMS0Q" title="Deploy GPTs to Any Website or Messaging Channel with OpenAI Assistants" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            </div>
             <p> Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
         </section>
