--- a/dre.html
+++ b/dre.html
@@ -39,7 +39,19 @@
     <!-- Sidebar Section -->
     <div class="sidebar">
         <!-- Sidebar Links -->
-        <!-- [Sidebar links remain unchanged] -->
+      
+       
+        <a href="https://writeitincursive.github.io/Andre-website/dre.html" >Home</a> 
+        <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
+          <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+        <a href="https://www.w3schools.com/" target="_blank">W3School</a>
+        <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
+        <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
+        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">GitHub</a>
+        <a href="#link8">Link 8</a>
+        <a href="#link9">Link 9</a>
+        <a href="#link10">Link 10</a>
+  
     </div>
    <!-- Main Content Section -->
 <main>
