--- a/dre.html
+++ b/dre.html
@@ -21,7 +21,11 @@
         <div class="header-content">
             <div id="logo">
                 <img src="Thumbnails/wallaceBrown.png" alt="Your Logo">
-            </div>
+             </div>
+             <!-- Banner Image Placement -->
+    <div id="top-banner">
+        <img src="Thumbnails/banner.jpg" alt="Banner">
+    </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
