--- a/dre.html
+++ b/dre.html
@@ -17,15 +17,14 @@
 <body>
     <!-- Header Section -->
     <header>
-        <!-- Logo and Navigation Bar -->
-        <div class="header-content">
+          <div class="header-top">
             <div id="logo">
                 <img src="Thumbnails/wallaceBrown.png" alt="Your Logo">
-             </div>
-             <!-- Banner Image Placement -->
-    <div id="top-banner">
-        <img src="Thumbnails/banner.jpg" alt="Banner">
-    </div>
+            </div>
+            <div id="top-banner">
+                <img src="Thumbnails/banner.jpg" alt="Banner">
+            </div>
+        </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
