--- a/dre.html
+++ b/dre.html
@@ -44,7 +44,7 @@
         <!-- Sidebar Links -->
       
        
-        <a href="https://writeitincursive.github.io/Andre-website/dre.html" ><b>Home</b></a> 
+        <a href="https://writeitincursive.github.io/Andre-website/dre.html" ><b>HOME</b></a> 
         <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
           <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         <a href="https://www.w3schools.com/" target="_blank">W3School</a>
