--- a/dre.html
+++ b/dre.html
@@ -75,7 +75,7 @@
        <div>
        
         <iframe width="540" height="360" src="https://www.youtube.com/embed/3FInhQLMS0Q" title="Deploy GPTs to Any Website or Messaging Channel with OpenAI Assistants" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      <iframe width="540" height="360" src="https://www.youtube.com/embed/3FInhQLMS0Q" title="Deploy GPTs to Any Website or Messaging Channel with OpenAI Assistants" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="540" height="360" src="https://openai.com/" </iframe>
        </div>
         <p>🌟 Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
     </section>
