--- a/dre.html
+++ b/dre.html
@@ -69,6 +69,10 @@
 
    <!-- Blog Section -->
     <section id="blog">
+        <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
         <h2>🌌 Exploring the New Frontier: ChatGPT and Advanced GPT Models 🤖</h2>
         <p>👋 Welcome to the latest in AI innovation! We're delving into the world of ChatGPT and the most recent GPT models that are revolutionizing how we interact with technology. </p>
         
